<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:id="@+id/iv_movie_card_poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_cover_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/movie_title"
                android:id="@+id/tv_movie_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_movie_card_poster"
                android:layout_marginBottom="5dp"
                android:paddingLeft="@dimen/movie_title_padding"
                android:paddingRight="@dimen/movie_title_padding"
                android:layout_marginTop="5dp"
                android:theme="@style/label"
                android:textSize="@dimen/backdrop_subtitle" />

            <TextView
                android:textColor="@color/colorAccentText"
                android:text="@string/movie_rating"
                android:id="@+id/tv_movie_card_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_card_title"
                android:layout_marginBottom="5dp"
                android:paddingLeft="@dimen/movie_title_padding"
                android:paddingRight="@dimen/movie_title_padding"
                android:textSize="@dimen/movie_title" />

            <TextView
                android:theme="@style/label"
                android:text="@string/movie_genre"
                android:id="@+id/tv_movie_card_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_card_rating"
                android:layout_marginBottom="5dp"
                android:paddingLeft="@dimen/movie_title_padding"
                android:paddingRight="@dimen/movie_title_padding"
                android:textSize="@dimen/movie_title" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>